@@ -6,6 +6,7 @@ import com.bers.domain.entities.Stop;
 import org.mapstruct.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface RouteMapper {
@@ -20,11 +21,23 @@ public interface RouteMapper {
     @Mapping(target = "durationMin", source = "durationMin")
     Route toEntity(RouteCreateRequest dto);
 
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "code", ignore = true)
+    @Mapping(target = "origin", ignore = true)
+    @Mapping(target = "destination", ignore = true)
+    @Mapping(target = "stops", ignore = true)
     @Mapping(target = "name", source = "name")
     @Mapping(target = "distanceKm", source = "distanceKm")
     @Mapping(target = "durationMin", source = "durationMin")
     void updateEntity(RouteUpdateRequest dto, @MappingTarget Route route);
 
+    @Mapping(target = "id", source = "id")
+    @Mapping(target = "code", source = "code")
+    @Mapping(target = "name", source = "name")
+    @Mapping(target = "origin", source = "origin")
+    @Mapping(target = "destination", source = "destination")
+    @Mapping(target = "distanceKm", source = "distanceKm")
+    @Mapping(target = "durationMin", source = "durationMin")
     @Mapping(target = "stops", source = "stops", qualifiedByName = "mapStopsToSummary")
     RouteResponse toResponse(Route entity);
 
@@ -39,6 +52,6 @@ public interface RouteMapper {
                         stop.getLat(),
                         stop.getLng()
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
